# app-core

./: .gitignore  CMakeLists.txt
App/: CMakeLists.txt
App/Source/: Game.cpp  Game.h  Main.cpp
Core/: CMakeLists.txt
Core/Source/: App.cpp  App.h  ILayer.h  IPlugin.h
Plugins/RaylibPlugin/: CMakeLists.txt
Plugins/RaylibPlugin/Source/: RaylibPlugin.cpp  RaylibPlugin.h  raygui.h  rlights.h
